@@ -4,11 +4,11 @@
   <parent>
     <artifactId>bpelunit</artifactId>
     <groupId>net.bpelunit</groupId>
-    <version>1.6.1-SNAPSHOT</version>
+    <version>1.6.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>framework</artifactId>
-  <version>1.6.1-SNAPSHOT</version>
+  <version>1.6.2-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>BPELUnit :: Framework</name>
   <build>
@@ -43,6 +43,8 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <!-- Jenkins will choke on the XMLResultProducerTest otherwise -->
+          <argLine>-XX:MaxPermSize=128m</argLine>
           <excludes>
             <exclude>net/bpelunit/test/unit/SimpleTest.java</exclude>
             <exclude>net/bpelunit/test/util/TestUtil.java</exclude>
@@ -62,20 +64,31 @@
           </execution>
         </executions>
       </plugin>
-      <!-- In addition to the regular .jar, generate an OSGi bundle Tycho can reuse -->
+      <!--
+          In addition to the regular .jar, generate an OSGi bundle
+          Tycho can reuse. Do not embed the dependencies already
+          brought in by net.bpelunit.util in order to avoid OSGi
+          classloader issues.
+      -->
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
-            <Export-Package>net.bpelunit.framework.control.deploy;net.bpelunit.framework;net.bpelunit.framework.*;schemaorg_apache_xmlbeans.system.*;net.bpelunit.framework.control.ext;net.bpelunit.framework.control.deploy.*;net.bpelunit.framework.xml.suite.*;net.bpelunit.framework.control.ext.*;net.bpelunit.framework.control.*</Export-Package>
+            <Export-Package>net.bpelunit.framework.control.deploy;net.bpelunit.framework;net.bpelunit.framework.*;schemaorg_apache_xmlbeans.system.*;net.bpelunit.framework.control.ext;net.bpelunit.framework.control.deploy.*;net.bpelunit.framework.xml.suite.*;net.bpelunit.framework.control.ext.*;net.bpelunit.framework.control.*;org.apache.xmlbeans.*</Export-Package>
             <_exportcontents>com.ibm.wsdl.*;javax.wsdl.*;org.apache.xmlbeans.*;org.apache.commons.lang;org.apache.log4j.*;de.schlichtherle.io.*;net.bpelunit.framework.xml.suite.*</_exportcontents>
-            <Import-Package>!*</Import-Package>
+            <Import-Package>org.jdom.*;org.apache.commons.io.*;!*</Import-Package>
             <Require-Bundle>net.bpelunit.model.bpel</Require-Bundle>
+<!-- 
+            <Export-Package>!net.bpelunit.util;!net.bpelunit.bpel;!net.bpelunit.model.*;net.bpelunit.*;schemaorg_apache_xmlbeans.system.*</Export-Package>
+            <_exportcontents>com.ibm.wsdl.*;javax.wsdl.*;org.apache.xmlbeans.*;org.apache.commons.lang;org.apache.log4j.*;de.schlichtherle.io.*</_exportcontents>
+            <Require-Bundle>net.bpelunit.model.bpel</Require-Bundle>
+            <Import-Package>!*</Import-Package>
+ -->
             <Bundle-SymbolicName>net.bpelunit.framework</Bundle-SymbolicName>
             <Embed-Transitive>true</Embed-Transitive>
             <Embed-Directory>target/dependency</Embed-Directory>
-            <Embed-Dependency>*;scope=compile;artifactId=!stax-api</Embed-Dependency>
+            <Embed-Dependency>*;scope=compile;artifactId=!stax-api|jdom|commons-io</Embed-Dependency>
             <Bundle-RequiredExecutionEnvironment>JavaSE-1.6</Bundle-RequiredExecutionEnvironment>
           </instructions>
         </configuration>
@@ -106,10 +119,6 @@
     <dependency>
       <groupId>org.apache.xmlbeans</groupId>
       <artifactId>xmlbeans</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jdom</groupId>
-      <artifactId>jdom</artifactId>
     </dependency>
     <dependency>
       <groupId>wsdl4j</groupId>
